@@ -18,27 +18,21 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    JJWT_VERSION = "0.12.3"
-}
-
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-
-    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-    // @Lombok과 @MapStruct간의 충돌 방지
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.github.ben-manes.caffeine:caffeine'
+
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.postgresql:postgresql'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-core'
@@ -52,10 +46,6 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation "org.springframework.security:spring-security-test"
-
-    implementation "io.jsonwebtoken:jjwt-api:${JJWT_VERSION}"
-    runtimeOnly "io.jsonwebtoken:jjwt-impl:${JJWT_VERSION}"
-    runtimeOnly "io.jsonwebtoken:jjwt-gson:${JJWT_VERSION}"
 
     implementation 'org.springframework.retry:spring-retry'
 
@@ -78,32 +68,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'com.nimbusds:nimbus-jose-jwt:10.3'
 
-    testImplementation 'org.mockito:mockito-core:5.11.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
-
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
-    // https://mvnrepository.com/artifact/ml.dmlc/xgboost4j
     implementation 'ml.dmlc:xgboost4j_2.13:3.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
 
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'com.nimbusds:nimbus-jose-jwt:10.3'
+    implementation 'org.jsoup:jsoup:1.18.3'
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-
-
-    implementation 'org.postgresql:postgresql:42.7.3'
 }
 
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
-    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
 
 jacocoTestReport {
